framec_tests/language_specific/python/v3_validator/negative/multi_issue_tolerant.frm
@target python

system S {
    machine:
        $A {
            e() {
                => $^ oops
                -> $ZZ() ; a()
                -> $ (1
            }
        }
}

